src/custom/styles/screens/ReferralCommissionScreen.pcss
.pg-referral-commission {
    color: black;
    font-size: 16px;
    margin: 0;
    padding-bottom: 30px;

    .cr-table-container {
        max-width: 960px;
        overflow-x: auto;

        .cr-table thead th {
            top: 0;
        }
    }

    &__level-card {
        background: #263434;
        border-radius: 4px;
    }

    .info-card {
        display: flex;

        &:not(:last-child) {
            margin-right: 30px;
        }

        &__icon {
            background: #FFD567;
            width: 41px;
            height: 40px;
            border-radius: 50%;
            margin: 0 12px;
            position: relative;

            div {
                height: 25px;
                width: 25px;
                background-size: contain;
                background-repeat: no-repeat;
                position: absolute;
                background-position: left top;
                left: 8px;
                top: 8px;
            }

            &--commission {
                background-image: url(./assets/images/referral-commission-icon.svg);
                top: 9px;
            }

            &--referrals {
                background-image: url(./assets/images/referrals-icon.svg);
                left: 9px;
            }

            &--fee {
                background-image: url(./assets/images/trade-fee-icon.svg);
                left: 9px;
            }

            &--profit {
                background-image: url(./assets/images/referral-profit-icon.svg);
            }

            &--total-referrals {
                background-image: url(./assets/images/total-referrals-icon.svg);
            }

            &--active-referrals {
                background-image: url(./assets/images/active-referrals-icon.svg);
            }

            &--active-ratio {
                background-image: url(./assets/images/active-ration-icon.svg);
            }
        }

        &__title {
            font-weight: normal;
            color: #648280;
            font-size: 12px;
            white-space: nowrap;
        }

        &__text {
            font-weight: 600;
            font-size: 20px;
            color: #E5E6EF;
            white-space: nowrap;
        }

        &__emrx {
            font-size: 14px;
            color: #E5E6EF;
            text-align: right;
            white-space: nowrap;
        }

        &__usd {
            font-size: 14px;
            color: #7D9794;
            position: relative;
            top: 22px;
            left: 8px;
            white-space: nowrap;
        }

        &__wrap {
            display: flex;
            padding: 15px 30px;
        }
    }


    .copyable-text-field {
        border: none;
        color: var(--table-text-color);
        position: relative;
        z-index: 1;
        font-size: 12px;
        margin-bottom: 5px;
    }

    .copyable-title {
        background: #222627;
        position: relative;
        left: 6px;
        top: 2px;
        padding: 0 6px;
    }

    #copy_referral_link {
        height: 50px;
        text-indent: 12px;
    }

    .cr-copyable-text-field__button {
        position: relative;
        left: -5px;
        top: 5px;
    }

    .level-card {
        background: #171e1e;
        border-radius: 4px;
        display: flex;
        flex: 1;
        padding: 28px;

        &:not(:last-child) {
            margin-right: 20px;
        }

        &__content {
            padding-left: 25px;
        }

        &__level {
            background-image: url(./assets/images/referral-level-bg.png);
            width: 68px;
            height: 68px;
            background-position: center center;
            background-repeat: no-repeat;
            font-size: 12px;
            line-height: 14px;
            text-align: center;
            color: #141717;

            div {
                text-align: center;
                color: #141717;
                font-size: 24px;
                line-height: 28px;
                padding-top: 9px;
            }
        }

        &__header {
            font-weight: 600;
            font-size: 1.2em;
            line-height: 23px;
            color: #E5E6EF;
        }

        &__subheader {
            font-weight: normal;
            font-size: 0.9em;
            line-height: 16px;
            color: #7D9794;
        }

        &__caption {
            font-weight: 600;
            font-size: 14px;
            line-height: 16px;
            color: #E8AF59;
            position: relative;
            top: 13px;
        }
    }

    &__container {
        max-width: 940px;
        margin: 0 auto;
    }

    .section {
        border-radius: 3px;
        background: #222627;
        margin-top: 20px;

        &__header {
            background: #263434;
            color: #9ECFC3;
            font-size: 14px;
            padding-left: 14px;
            height: 32px;
            line-height: 32px;
            border-radius: 5px 5px 0 0;
            display: flex;
            justify-content: space-between;
            align-items: center;
        }
    }

    .section-margin {
        margin-top: 40px;
    }

    .section--transparent {
        margin-top: 20px;
        display: flex;
        justify-content: space-between;
    }

    .table {
        font-size: 12px;
        white-space: nowrap;

        tr {
            background-color: #222627;
            border-bottom: 1px solid var(--header-border);
            height: 47px;

            &:last-child {
                td {
                    background-color: #141717;
                    color: #fff;
                    font-weight: 600;

                    &:first-child {
                        color: #FFD567;
                        font-weight: normal;
                    }

                    &:nth-child(2),
                    &:nth-child(4),
                    &:nth-child(5) {
                        font-weight: normal;
                    }
                }
            }
        }

        .cr-table__head-row {
            th {
                background-color: #1f2223;
            }
        }

        .pg-history-elem__pagination {
            p {
                color: #648280;
            }
        }
    }
}



@media (max-width: 767px) {
    .pg-referral-commission {
        .info-card {
            flex: 0 0 50%;
            margin-right: 0 !important;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            margin-top: 30px;

            &__wrap {
                flex-wrap: wrap;
                align-items: flex-start;
                justify-content: center;
            }

            &__title {
                text-align: center;
                margin-top: 10px;
            }

            &__text {
                position: relative;
                text-align: center;
            }

            &__emrx {
                text-align: left;
                left: -27px;
                position: relative;
            }

            &__usd {
                position: relative;
                top: -18px;
                left: 56px;
            }
        }

        .level-card {
            flex: 0 0 100%;
            margin-bottom: 10px;
            margin-right: 0 !important;
        }

        .section--transparent {
            flex-wrap: wrap;
        }

        .section {
            margin-top: 10px;
        }

        .section--transparent {
            margin-top: 10px;
        }

        .cr-table-container {
            overflow: scroll;

            tr {
                font-size: 12px;
                
            }

            .cr-table__head tr th {
                top: 0;
            }
        }
    }
}

